Add logic to persist and clear training data and expose it on the front-end
Signed-off-by: Gavin de Bruyn <me@gavindebruyn.com>

--- a/apps/text-contrast/src/public/index.html
+++ b/apps/text-contrast/src/public/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <div id="content-container">
+        <div class="column">
+            <h5>AI Tools:</h5>
+            <div class="row">
+                <button id="btn-persist-training-data" class="mr-8px">Persist Training Data</button>
+                <button id="btn-clear-training-data">Clear Training Data</button>
+            </div>
+        </div>
+
+        <hr>
+
         <div id="test-block" class="column">
             <h3>Test Text String</h3>
         </div>
@@ -14,11 +24,13 @@
             <h5>The AI's guess:</h5>
             <div id="ai-guess-block" class="column"><span>Test Text String</span></div>
         </div>
+
         <hr>
+
         <div class="column">
             <h5>Correct Text Contrast:</h5>
             <div class="row">
-                <button id="btn-dark">Dark</button>
+                <button id="btn-dark" class="mr-8px">Dark</button>
                 <button id="btn-light">Light</button>
             </div>
         </div>
